--- a/scenario/3.3-go-select.md
+++ b/scenario/3.3-go-select.md
@@ -1,1 +1,18 @@
+# select 语句
+`select` 语句使一个 Go 程可以等待多个通信操作。
 
+`select` 会阻塞到某个分支可以继续执行为止，这时就会执行该分支。当多个分支都准备好时会随机选择一个执行。
+
+
+# 默认选择
+当` select` 中的其它分支都没有准备好时，`default` 分支就会执行。
+
+为了在尝试发送或者接收时不发生阻塞，可使用 `default` 分支：
+```
+select {
+case i := <-c:
+    // 使用 i
+default:
+    // 从 c 中接收会阻塞时执行
+}
+```
